--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ APP_SCRIPT_URL = 'https://script.google.com/macros/s/oooooooooooooooooooooooooo/
 DATABASE_URL = ''
 DJANGO_DATABASE = 'default'
 DEBUG = False
-GTAG = ''
+GTAG_ID = ''
