--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ APP_SCRIPT_URL = 'https://script.google.com/macros/s/oooooooooooooooooooooooooo/
 DATABASE_URL = ''
 DJANGO_DATABASE = 'default'
 DEBUG = False
-GTAG_ID = ''
+# This should be the id (G-0000000000)
+GTAG = ''
