--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 amqp==5.2.0
-asgiref==3.8.1
+asgiref==3.11.0
 async-timeout==4.0.3
 automium==0.2.6
-automium-web==0.1.1
+automium_web==0.1.1
 billiard==4.2.1
 blinker==1.8.2
 celery==5.4.0
 certifi==2024.8.30
+channels==4.3.2
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -17,6 +18,7 @@ dj-database-url==2.2.0
 Django==5.1.2
 django-debug-toolbar==4.4.6
 django-sslserver==0.22
+djangochannelsrestframework==1.3.0
 djangorestframework==3.15.2
 djangorestframework-csv==3.0.2
 Flask==3.0.3
