--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 amqp==5.2.0
 asgiref==3.11.0
 async-timeout==4.0.3
+attrs==25.4.0
+autobahn==25.12.2
+Automat==25.4.16
 automium==0.2.6
 automium_web==0.1.1
 billiard==4.2.1
 blinker==1.8.2
+cbor2==5.8.0
 celery==5.4.0
 certifi==2024.8.30
+cffi==2.0.0
 channels==4.3.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -14,8 +19,11 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+constantly==23.10.4
+cryptography==46.0.3
+daphne==4.2.1
 dj-database-url==2.2.0
-Django==5.1.2
+Django==5.2.9
 django-debug-toolbar==4.4.6
 django-sslserver==0.22
 djangochannelsrestframework==1.3.0
@@ -23,27 +31,42 @@ djangorestframework==3.15.2
 djangorestframework-csv==3.0.2
 Flask==3.0.3
 gunicorn==23.0.0
+hyperlink==21.0.0
 idna==3.10
+Incremental==24.11.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 kombu==5.4.2
 legacy==0.1.7
 MarkupSafe==2.1.5
+msgpack==1.1.2
 packaging==24.1
 prompt_toolkit==3.0.48
 psycopg==3.2.3
 psycopg-c==3.2.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+py-ubjson==0.16.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pyOpenSSL==25.3.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 redis==5.1.0
 requests==2.32.3
+service-identity==24.2.0
 six==1.16.0
 sqlparse==0.5.1
+Twisted==25.5.0
+txaio==25.12.2
 typing_extensions==4.12.2
 tzdata==2024.2
+ujson==5.11.0
 urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.0.4
 whitenoise==6.7.0
+zope.interface==8.1.1
